--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/cool?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2b8
+    url: jdbc:mysql://43.130.29.36:3306/cool?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2b8
     username: root
-    password: 123456
+    password: shdea2020
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 #    url: jdbc:postgresql://127.0.0.1:5432/cool
