--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/cool?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2b8
+    url: jdbc:mysql://10.4.4.11:3306/cool?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2b8
     username: root
-    password: 123456
+    password: shdea2020
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 # AutoTable配置，根据实体类自动生成表
